--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
     <main>
         <section>
             <h2>Про нас</h2>
-            <p>Курс з системного аналізу у діджитал-сфері. Звертайтеся до нас за додатковою інформацією!</p>
+            <p>Запрошуємо Вас записатись на курс "Системний аналіз у діджитал-сфері". Звертайтеся до нас за додатковою інформацією!</p>
         </section>
 
         <section>
             <h2>Контакти</h2>
             <address>
                 <p>Email: <a href="mailto:example@example.com">example@example.com</a></p>
-                <p>Телефон: +123456789</p>
             </address>
         </section>
     </main>
