--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
+            background-color: #00FFFF;
             margin: 0;
             padding: 0;
         }
@@ -88,13 +88,13 @@
     <main>
         <section>
             <h2>Про нас</h2>
-            <p>апрошуємо Вас записатись на курс "Системний аналіз у діджитал-сфері". Звертайтеся до нас з будь-якими проектами!</p>
+            <p>Запрошуємо Вас записатись на курс "Системний аналіз у діджитал-сфері". Звертайтеся до нас з будь-якими проектами!</p>
         </section>
 
         <section>
             <h2>Контакти</h2>
             <address>
-                <p>Email: <a href="mailto:example@example.com">example@example.com</a></p>
+                <p>Email: <a href="mailto: kk00e@example.com">example@example.com</a></p>
                 <p>Телефон: +123456789</p>
             </address>
         </section>
