--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #00FFFF;
+            background-color: ##f8f8f8;
             margin: 0;
             padding: 0;
         }
